--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "prettier --config .prettierrc \"**/*.js\" --write",
+    "eslint": "eslint --config .eslintrc \"**/*.js\"",
+    "build": "npx tsc",
+    "jasmine": "jasmine",
+    "test": "npm run build && npm run jasmine"
   },
   "repository": {
     "type": "git",
