--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "express": "^4.17.1",
     "jasmine": "^3.8.0",
     "jasmine-spec-reporter": "^7.0.0",
     "supertest": "^6.1.5"
@@ -12,6 +13,7 @@
     "@types/eslint": "^7.28.0",
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/express": "^4.17.13",
     "@types/jasmine": "^3.8.2",
     "@types/node": "^16.6.1",
     "@types/prettier": "^2.3.2",
@@ -27,7 +29,8 @@
     "eslint": "eslint --config .eslintrc \"**/src/*.ts\"",
     "build": "npx tsc",
     "jasmine": "jasmine",
-    "test": "npm run build && npm run jasmine"
+    "test": "npm run build && npm run jasmine",
+    "all": "npm run prettier && npm run eslint && npm run test"
   },
   "repository": {
     "type": "git",
