--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "jasmine": "^3.8.0",
     "jasmine-spec-reporter": "^7.0.0",
+    "sharp": "^0.28.3",
     "supertest": "^6.1.5"
   },
   "devDependencies": {
@@ -17,6 +18,7 @@
     "@types/jasmine": "^3.8.2",
     "@types/node": "^16.6.1",
     "@types/prettier": "^2.3.2",
+    "@types/sharp": "^0.28.5",
     "@types/supertest": "^2.0.11",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
