--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "build": "npx tsc",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
-    "all": "npm run prettier && npm run eslint && npm run test"
+    "all": "npm run prettier && npm run eslint && npm run test",
+    "start": "node out/index"
   },
   "repository": {
     "type": "git",
